# hs-dnd

./: .gitignore  hs-dnd.cabal  stack.yaml
src/: Main.hs
src/DnD/: Arcane.hs  Class.hs  Default.hs  Dice.hs  Effects.hs  Feat.hs  Game.hs  Item.hs  Magic.hs  Player.hs  Race.hs
src/DnD/Magic/: Arcane.hs
