name:                hs-dnd
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hs-dnd#readme
license:             BSD3
license-file:        LICENSE
author:              Aaron Marks
maintainer:          nymacro@gmail.com
copyright:           2010 Aaron Marks
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hs-dnd
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , random
                     , lens
                     , free
                     , text
                     , template-haskell
                     -- , gtk3
